All changes by Craig Miller cvmiller at gmail dot com

3 January 2016 		v.96
	Happy New Year
	Added nmap scanning of link-local only networks with -L -N
		For networks which have no global prefix (e.g. IPv6 not turned on)
	Removed old README, refer to README.md for current info
	
31 December 2015	v0.95
	Fixed typo from bash arithmetic clean up

30 December 2015	v0.94
	Cleaned up comments
	Changed bash arithmetic conditionals to new form (better performance)

29 December 2015	v0.93
	Changed ping6 of ff02::1 to work with older (2.6) linux systems


26 December 2015	v4disc.sh v0.91
	Added support for IPv4 cidr /23, /24, /25 networks
	Updated README.md with new support

23 December 2015	v0.92
	Added nmap option -N
		When root, nmap will add -O (OS identification)

22 December 2015	v0.91
	Added support for VLAN based interfaces
	Fixed duplicate prefix detection (when static IPv6 address used)

17 December 2015 	v0.90
	Initial release (on github)
	